# avocado

./: .gitignore  CMakeLists.txt  README.md
app1/: main.cpp
scripts/: uWebSockets_build.ps1
wsrv/: main.cpp
